2018-11-6 update